--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.306.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "youtube-transcript": "^1.0.6"
